# rutle

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: actions.yml
benches/: performance.rs
gui/src/: theme.rs
gui/src/richtext/: markdown_ast.rs  markdown_converter.rs  mod.rs  structured_document.rs  structured_editor.rs  structured_rich_display.rs  tdoc_bridge.rs  tree_edit.rs  tree_walk.rs
gui/tests/: structured_rich_display_snapshots.rs  svg_draw_context.rs
gui/tests/data/: example.md
src/: draw_context.rs  editor.rs  inline_convert.rs  lib.rs  markdown_ast.rs  markdown_converter.rs  markdown_parser.rs  render_context.rs  renderer.rs  reveal.rs  structured_document.rs  structured_editor.rs  structured_rich_display.rs  svg_draw_context.rs  theme.rs  tree_edit.rs  tree_walk.rs
src/richtext/: editor.rs  inline_convert.rs  markdown_ast.rs  markdown_converter.rs  markdown_parser.rs  mod.rs  renderer.rs  reveal.rs  structured_document.rs  structured_editor.rs  structured_rich_display.rs  tree_edit.rs  tree_path.rs  tree_walk.rs
tests/: FONTS.md  editing_ops.rs  layout_snapshots.rs  layout_snapshots_mono.rs  structured_rich_display_snapshots.rs  svg_draw_context.rs
tests/common/: mod.rs
tests/data/: example.md
tests/snapshots/: layout_snapshots__caret_affinity_left.snap  layout_snapshots__caret_affinity_right.snap  layout_snapshots__complex_rendering.snap  layout_snapshots__cursor_positioning_middle_of_line.snap  layout_snapshots__list_then_paragraph.snap  layout_snapshots__list_with_continuation_paragraph.snap  layout_snapshots__richtext_basic_render.snap  layout_snapshots__selection_across_blocks.snap  layout_snapshots__selection_single_block.snap  layout_snapshots__table_force_wrap_long_tokens.snap  layout_snapshots__table_render.snap  layout_snapshots_mono__caret_affinity_left.snap  layout_snapshots_mono__caret_affinity_right.snap  layout_snapshots_mono__complex_rendering.snap  layout_snapshots_mono__cursor_positioning_middle_of_line.snap  layout_snapshots_mono__list_then_paragraph.snap  layout_snapshots_mono__list_with_continuation_paragraph.snap  layout_snapshots_mono__richtext_basic_render.snap  layout_snapshots_mono__selection_across_blocks.snap  layout_snapshots_mono__selection_single_block.snap  layout_snapshots_mono__table_force_wrap_long_tokens.snap  layout_snapshots_mono__table_render.snap
