[package]
name = "rutle"
description = "Rob's Universal Text Layout Engine: a rendering-agnostic structured editor and layout core for tdoc::Document"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/roblillack/rutle"

[dependencies]
tdoc = { version = "0.11.0", default-features = false }
unicode-segmentation = "1.10"

[dev-dependencies]
insta = "1.34"
rusttype = "0.9"
unicode-segmentation = "1.10"

[[bench]]
name = "performance"
harness = false
